# one-inch-hackathon-aptos

./: README.md
aptos/: Move.toml  Notes.md
aptos/scripts/: factory_script.move
aptos/sources/: factory.move  hello_blockchain.move  mock_token.move
aptos/tests/: factory_test.move
eth/: .gitignore  foundry.toml  remappings.txt
eth/script/: Resolver.s.sol
eth/src/: MockLimitOrder.sol  OneInchInterfaces.sol  Resolver.sol
eth/src/libs/: MakerTraitsLib.sol
eth/test/: MockLimitOrder.t.sol  Resolver.t.sol
relay/: .env.example  package-lock.json  package.json
relay/src/: index.ts
relayer-old/: pyproject.toml  relay.py  run
