[tool.poetry]
name = "relayer"
version = "0.1.0"
description = ""
authors = ["Max Wickham <maxwickham@startmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
aptos-sdk = "^0.11.0"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
